--- a/core/crypto/Cargo.toml
+++ b/core/crypto/Cargo.toml
@@ -31,6 +31,7 @@ thiserror = "1"
 near-account-id = { path = "../account-id" }
 deepsize = { version = "0.2.0", optional = true }
 pqcrypto-falcon = "0.2.10"
+pqcrypto-traits = "0.3.4"
 
 [dev-dependencies]
 hex-literal = "0.2"
