--- a/core/crypto/Cargo.toml
+++ b/core/crypto/Cargo.toml
@@ -2,18 +2,18 @@
 name = "near-crypto"
 version = "0.0.0"
 license = "MIT OR Apache-2.0"
-authors = ["Near Inc <hello@nearprotocol.com>"]
+authors = ["Post-Quantum-Team <>"]
 publish = true
 # Please update rust-toolchain.toml as well when changing version here:
 rust-version = "1.62.1"
 edition = "2021"
-repository = "https://github.com/near/nearcore"
+repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
 description = "This is an internal crate for common cryptographic types"
 
 [dependencies]
 arrayref = "0.3"
 blake2 = "0.9.1"
-borsh = "0.9"
+borsh = { version = "0.9", features = ["const-generics"] }
 bs58 = "0.4"
 c2-chacha = "0.3"
 curve25519-dalek = "3"
@@ -22,6 +22,8 @@ ed25519-dalek = "1"
 primitive-types = { version = "0.10", default-features = false }
 once_cell = "1.5.2"
 parity-secp256k1 = "0.7"
+pqcrypto-falcon = "0.2.10"
+pqcrypto-traits = "0.3.4"
 rand = "0.7"
 rand_core = "0.5"
 serde = { version = "1", features = [ "derive" ] }
