--- a/core/crypto/Cargo.toml
+++ b/core/crypto/Cargo.toml
@@ -19,10 +19,10 @@ c2-chacha = "0.3"
 curve25519-dalek = "3"
 derive_more = "0.99.9"
 ed25519-dalek = "1"
+near-falcon512 = { git = "https://github.com/Post-Quantum-Team/Post-Quantum-Near-Falcon512" }
 primitive-types = { version = "0.10", default-features = false }
 once_cell = "1.5.2"
 parity-secp256k1 = "0.7"
-pqcrypto-falcon = "0.2.10"
 pqcrypto-traits = "0.3.4"
 rand = "0.7"
 rand_core = "0.5"
