--- a/chain/chunks-primitives/Cargo.toml
+++ b/chain/chunks-primitives/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "near-chunks-primitives"
-version = "0.0.0"
-authors.workspace = true
-publish = true
+version = "0.15.0"
+authors = ["Zigtur <zigtur@protonmail.com>"]
+publish = false
 # Please update rust-toolchain.toml as well when changing version here:
-rust-version.workspace = true
-edition.workspace = true
+edition = "2021"
+rust-version = "1.64.0"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/near/nearcore"
 description = "This crate hosts NEAR chunks-related error types"
