--- a/chain/chunks/Cargo.toml
+++ b/chain/chunks/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "near-chunks"
-version = "0.0.0"
-authors.workspace = true
+version = "0.15.0"
+authors = ["Zigtur <zigtur@protonmail.com>"]
 publish = false
 # Please update rust-toolchain.toml as well when changing version here:
-rust-version.workspace = true
-edition.workspace = true
+edition = "2021"
+rust-version = "1.64.0"
 
 [dependencies]
 actix.workspace = true
