--- a/chain/jsonrpc/Cargo.toml
+++ b/chain/jsonrpc/Cargo.toml
@@ -1,24 +1,24 @@
 [package]
 name = "near-jsonrpc"
-version = "0.0.0"
-authors.workspace = true
+version = "0.15.0"
+authors = ["Zigtur <zigtur@protonmail.com>"]
 publish = false
 # Please update rust-toolchain.toml as well when changing version here:
-rust-version.workspace = true
-edition.workspace = true
+edition = "2021"
+rust-version = "1.64.0"
 
 [dependencies]
-actix-cors.workspace = true
-actix-web.workspace = true
-actix.workspace = true
-easy-ext.workspace = true
-futures.workspace = true
-once_cell.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-tokio.workspace = true
-tracing.workspace = true
-tracing-subscriber.workspace = true
+actix = "0.13.0"
+actix-cors = "0.6.1"
+actix-web = "4.0.1"
+easy-ext = "0.2"
+futures = "0.3.5"
+once_cell = "1.13.1"
+serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
+serde_json = "1.0.68"
+tokio = { version = "1.16.1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
+tracing = { version = "0.1.36", features = ["std"] }
+tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry", "std"] }
 
 near-chain-configs = { path = "../../core/chain-configs" }
 near-client-primitives = { path = "../client-primitives" }
