--- a/core/crypto/Cargo.toml
+++ b/core/crypto/Cargo.toml
@@ -1,39 +1,40 @@
 [package]
 name = "near-crypto"
-version = "0.0.0"
+version = "0.15.0"
 license = "MIT OR Apache-2.0"
-authors.workspace = true
-publish = true
+authors = ["Zigtur <zigtur@protonmail.com>"]
 # Please update rust-toolchain.toml as well when changing version here:
-rust-version.workspace = true
-edition.workspace = true
-repository = "https://github.com/near/nearcore"
+rust-version = "1.64.0"
+edition= "2021"
+repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
 description = "This is an internal crate for common cryptographic types"
 
 [dependencies]
-arrayref.workspace = true
-blake2.workspace = true
-borsh.workspace = true
-bs58.workspace = true
-c2-chacha.workspace = true
-curve25519-dalek.workspace = true
-deepsize = { workspace = true, optional = true }
-derive_more.workspace = true
-ed25519-dalek.workspace = true
+
+
+arrayref = "0.3"
+blake2 = "0.9.1"
+borsh = { version = "0.9", features = ["rc"] }
+bs58 = "0.4"
+c2-chacha = "0.3"
+curve25519-dalek = "3"
+deepsize = { version = "0.2.0", features = ["chrono"], optional = true }
+derive_more = "0.99.9"
+ed25519-dalek = "1"
+once_cell = "1.13.1"
 near-account-id = { path = "../account-id" }
-once_cell.workspace = true
-primitive-types.workspace = true
+primitive-types = { version = "0.10", default-features = false }
 rand = "0.7"
-secp256k1.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-subtle.workspace = true
-thiserror.workspace = true
+secp256k1 = { version = "0.24", features = ["recovery", "rand-std"] }
+serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
+serde_json = "1.0.68"
+subtle = "2.2"
+thiserror = "1.0.30"
 
 [dev-dependencies]
 hex-literal = "0.2"
-sha2.workspace = true
-tempfile.workspace = true
+sha2 = "0.10"
+tempfile = "3.3"
 
 [features]
 deepsize_feature = [
