--- a/core/primitives-core/Cargo.toml
+++ b/core/primitives-core/Cargo.toml
@@ -1,33 +1,32 @@
 [package]
 name = "near-primitives-core"
-version = "0.0.0"
-authors.workspace = true
-publish = true
+version = "0.15.0"
+authors = ["Zigtur <zigtur@protonmail.com>"]
 # Please update rust-toolchain.toml as well when changing version here:
-rust-version.workspace = true
-edition.workspace = true
+edition = "2021"
+rust-version = "1.64.0"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/near/nearcore"
+repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
 description = """
 This crate provides the core set of primitives used by other nearcore crates including near-primitives
 """
 
 [dependencies]
-base64.workspace = true
-borsh.workspace = true
-bs58.workspace = true
-deepsize = { workspace = true, optional = true }
-derive_more.workspace = true
-num-rational.workspace = true
-serde.workspace = true
-serde_repr.workspace = true
-sha2.workspace = true
-strum.workspace = true
+base64 = "0.13"
+borsh = { version = "0.9", features = ["rc"] }
+bs58 = "0.4"
+deepsize = { version = "0.2.0", features = ["chrono"], optional = true }
+derive_more = "0.99.9"
+num-rational = { version = "0.3.1", features = ["serde"] }
+serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
+serde_repr = "0.1.8"
+sha2 = "0.10"
+strum = { version = "0.24", features = ["derive"] }
 
 near-account-id = { path = "../account-id" }
 
 [dev-dependencies]
-serde_json.workspace = true
+serde_json = "1.0.68"
 
 [features]
 default = []
