--- a/core/primitives/Cargo.toml
+++ b/core/primitives/Cargo.toml
@@ -1,37 +1,36 @@
 [package]
 name = "near-primitives"
-version = "0.0.0"
-authors.workspace = true
-publish = true
+version = "0.15.0"
+authors = ["Zigtur <zigtur@protonmail.com>"]
 # Please update rust-toolchain.toml as well when changing version here:
-rust-version.workspace = true
-edition.workspace = true
+edition = "2021"
+rust-version = "1.64.0"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/near/nearcore"
+repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
 description = """
 This crate provides the base set of primitives used by other nearcore crates
 """
 
 [dependencies]
-borsh.workspace = true
-byteorder.workspace = true
-bytesize.workspace = true
-cfg-if.workspace = true
-chrono.workspace = true
-deepsize = { workspace = true, optional = true }
-derive_more.workspace = true
-easy-ext.workspace = true
-hex.workspace = true
-num-rational.workspace = true
-once_cell.workspace = true
-primitive-types.workspace = true
-rand.workspace = true
-reed-solomon-erasure.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-smart-default.workspace = true
-strum.workspace = true
-thiserror.workspace = true
+borsh = { version = "0.9", features = ["rc"] }
+byteorder = "1.3"
+bytesize = { version = "1.1", features = ["serde"] }
+cfg-if = "1"
+chrono = { version = "0.4.19", features = ["serde"] }
+deepsize = { version = "0.2.0", features = ["chrono"], optional = true }
+derive_more = "0.99.9"
+easy-ext = "0.2"
+hex = { version = "0.4.2", features = ["serde"] }
+num-rational = { version = "0.3.1", features = ["serde"] }
+once_cell = "1.13.1"
+primitive-types = { version = "0.10", default-features = false }
+rand = "0.8.5"
+reed-solomon-erasure = "4"
+serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
+serde_json = "1.0.68"
+smart-default = "0.6"
+strum = { version = "0.24", features = ["derive"] }
+thiserror = "1.0.30"
 
 near-primitives-core = { path = "../primitives-core"}
 near-crypto = { path = "../crypto" }
@@ -69,9 +68,9 @@ deepsize_feature = [
 ]
 
 [dev-dependencies]
-assert_matches.workspace = true
-bencher.workspace = true
-insta.workspace = true
+assert_matches = "1.5.0"
+bencher = "0.1.5"
+insta = "1.14.0"
 
 [[bench]]
 name = "serialization"
