--- a/core/crypto/Cargo.toml
+++ b/core/crypto/Cargo.toml
@@ -14,7 +14,7 @@ description = "This is an internal crate for common cryptographic types"
 
 arrayref = "0.3"
 blake2 = "0.9.1"
-borsh = { version = "0.9", features = ["rc"] }
+borsh = { version = "0.9", features = ["rc", "const-generics"] }
 bs58 = "0.4"
 c2-chacha = "0.3"
 curve25519-dalek = "3"
@@ -23,7 +23,9 @@ derive_more = "0.99.9"
 ed25519-dalek = "1"
 once_cell = "1.13.1"
 near-account-id = { path = "../account-id" }
+near-falcon512 = { git = "https://github.com/Post-Quantum-Team/Post-Quantum-Near-Falcon512" }
 primitive-types = { version = "0.10", default-features = false }
+pqcrypto-traits = "0.3.4"
 rand = "0.7"
 secp256k1 = { version = "0.24", features = ["recovery", "rand-std"] }
 serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
